testsuite/tests/properties/invalid_final/final_parse_field.lkt
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- BarNode(ExampleNode(@Example))
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode implements TokenNode {
}

class BarNode : FooNode {
    @exported @final @parse_field f: ExampleNode
}
